# PrecisionDemote

./: .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  LICENSE  README.md  build.sh  run.sh
backend/: analyzer.js  package-lock.json  package.json  server.js
backend/test/: analyzer.test.js
clang-tool/: CMakeLists.txt
clang-tool/src/: main.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CodeDiff.jsx  CodeEditor.jsx  CountUp.jsx  ErrorBoundary.jsx  ErrorTrace.jsx  ExamplesGallery.jsx  ExportMenu.jsx  FeatureShowcase.jsx  Footer.jsx  GraphPanel.jsx  MemoryShrink.jsx  MetricsPanel.jsx  Navbar.jsx  NodeTable.jsx  Preloader.jsx  PresenterMode.jsx  RiskSkyline.jsx  RuleGauntlet.jsx  RulerCarousel.jsx  ScoreGauge.jsx  SimulationPanel.jsx
frontend/src/components/ui/: glowing-effect.jsx  lamp.jsx
frontend/src/lib/: analyzer.js  blockReason.js  monaco.js  useScanReveal.js
frontend/src/pages/: AnalysisPage.jsx  DocsPage.jsx  HomePage.jsx  MetricsPage.jsx  SimulatorPage.jsx  SlidesPage.jsx  StepByStepPage.jsx  VisualizerPage.jsx  WorkspacePage.jsx
tests/: analysis_result.json  expected_output.cpp  extract_rewritten.py  tc_accumulator.cpp  tc_depth.cpp  tc_division.cpp  tc_double.cpp  tc_fanin.cpp  tc_mixed.cpp  tc_overflow.cpp  tc_simple.cpp  test_kernels.cpp  validate_tests.py
